--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -22,13 +22,13 @@
       {% endif %}
     </div>
 
-    {% if current_user.is_authenticated and current_user != user %}
+    <!-- {% if current_user.is_authenticated and current_user != user %}
       {% if current_user.is_following(user) %}
         <a href="{{ url_for('unfollow', user_id=user.id) }}" class="unfollow_btn">Unfollow</a>
       {% else %}
         <a href="{{ url_for('follow', user_id=user.id) }}" class="follow_btn">Follow</a>
       {% endif %}
-    {% endif %}
+    {% endif %} -->
 
     <p>{{ user.followers.count() }} Followers | {{ user.followed.count() }} Following</p>
 
@@ -49,7 +49,7 @@
               <h1 class="fullname">{{ post.author.fullname }}</h1>
               <span class="full date" data-time="{{ post.date_posted.isoformat() }}Z"></span>
             </div>
-            <a href="{{ url_for('main.view_profile', username=post.author.username) }}" class="username">@{{ post.author.username }}</a>
+            <a href="#" class="username">@{{ post.author.username }}</a>
           </div>
         </div>
 
@@ -90,18 +90,6 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <button type="button" class="delete" data-post-id="{{ post.id }}"><i class="fas fa-trash"></i></button>
           </form>
-
-          <!-- CUSTOM CONFIRMATION MODAL -->
-          <div id="deleteConfirmModal" class="del-modal-overlay" style="display: none;">
-            <div class="del-modal-content">
-              <h3>Are you sure?</h3>
-              <p>This action cannot be undone.</p>
-              <div class="del-modal-buttons">
-                <button id="confirmDeleteBtn">Yes, delete</button>
-                <button id="cancelDeleteBtn">Cancel</button>
-              </div>
-            </div>
-          </div>
           {% endif %}
         </div>
       </div>
@@ -110,6 +98,18 @@
     <p>No posts yet.</p>
     {% endif %}
     
+  </div>
+
+  <div id="deleteConfirmModal" class="del-modal-overlay" aria-hidden="true">
+    <div class="del-modal-content" role="dialog" aria-modal="true" aria-labelledby="delTitle">
+      <h3 id="delTitle">Are you sure?</h3>
+      <p>This action cannot be undone.</p>
+
+      <div class="del-modal-buttons">
+        <button type="button" id="confirmDeleteBtn">Yes, delete</button>
+        <button type="button" id="cancelDeleteBtn">Cancel</button>
+      </div>
+    </div>
   </div>
 </div>
 
